--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "radix-ui": "^1.4.2",
-    "react": "^19.1.0",
+    "react": "^19.1.1",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
