--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@vercel/blob": "^1.1.1",
     "better-auth": "^1.3.5",
     "class-variance-authority": "^0.7.1",
@@ -27,6 +27,7 @@
     "drizzle-orm": "^0.44.4",
     "drizzle-seed": "^0.3.1",
     "lucide-react": "^0.539.0",
+    "motion": "^12.23.12",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
