--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.31.4",
+    "eslint": "9.33.0",
+    "eslint-config-next": "15.4.7",
     "tailwindcss": "^4",
     "tsx": "^4.20.4",
     "tw-animate-css": "^1.3.6",
