--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
         "**/*.tsx",
         ".next/types/**/*.ts",
         "src/lib/auth-client,ts"
-, "majors-seed.sq;"    ],
+, "majors-seed.sq;", "src/app/(main)/star-riview"    ],
     "exclude": ["node_modules"]
 }
