--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@tanstack/react-table": "^8.21.3",
     "@tiptap/react": "^3.2.1",
     "@tiptap/starter-kit": "^3.2.1",
     "@vercel/blob": "^1.1.1",
@@ -46,8 +47,10 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "recharts": "^2.12.7",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^4.0.17"
   },
   "devDependencies": {
@@ -55,6 +58,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/recharts": "^1.8.29",
     "drizzle-kit": "^0.31.4",
     "eslint": "9.33.0",
     "eslint-config-next": "15.4.7",
