--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@better-auth/cli": "^1.3.5",
+    "@better-fetch/fetch": "^1.1.18",
     "@hookform/resolvers": "^5.2.1",
     "@neondatabase/serverless": "^1.0.1",
     "@origin-space/image-cropper": "^0.1.9",
